# ai-factory

./: .env.example  .gitignore  README.md  cloudbuild.deploy-tools.yaml  cloudbuild.llm-fix.yaml  cloudbuild.phase1.yaml  cloudbuild.release.yaml  docker-compose.yml  factory_config.yaml  litellm_config.yaml  package-lock.json  pyproject.toml
.github/workflows/: preview.yml  security.yml
docs/: AI_SOFTWARE_FACTORY_TECH_PLAN.md  ARCHITECTURE_MERMAID.md  PHASE1_IMPLEMENTATION_STATUS.md  PHASE2_IMPLEMENTATION_STATUS.md  PHASE2_KICKOFF.md  PHASE3_IMPLEMENTATION_STATUS.md
factory/agents/: phase1_operatives.py  phase2_handlers.py  self_heal.py  task_result.py
factory/auth/: firebase_auth.py
factory/clarification/: broker.py  responder.py
factory/groupchat/: mentions.py
factory/llm/: runtime.py
factory/memory/: decision_log.py  memory_controller.py
factory/messaging/: __init__.py  actor.py  bus.py
factory/observability/: incident.py  (+2 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json
scripts/: gcloud_deploy.sh  gcloud_managed_infra.sh  gcloud_phase1_deploy.sh  gcloud_phase1_managed_infra.sh  gcloud_project_env_tag.sh  gen_cb_yaml.py  verify_tools.py
teams/: TEAM_CATALOG.yaml
tests/: test_clarification_responder.py  test_group_chat_mentions.py  test_groupchat_api.py  test_incident_notifier.py  test_llm_runtime.py  test_memory_service_api.py  test_orchestrator_api.py  test_orchestrator_phase2_api.py  test_phase1_pipeline.py  test_phase2_handlers.py  test_phase2_pipeline.py  test_project_qa.py  test_project_qa_api.py  test_task_result.py
(+131 files in other folders)
