[project]
name = "ai-factory"
version = "0.1.0"
description = "Phase 1 MVP for AI Software Factory"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "python-dotenv>=1.0.1",
  "langfuse>=2.59.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.uv]
package = false
